force-app/main/default/objects/Test_Carousel_Custom_Metadata__mdt/Test_Carousel_Custom_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>This is used for testing the RetrieveCarouselCustomMetadata Apex controller.</description>
    <label>Test Carousel Custom Metadata</label>
    <pluralLabel>Test Carousel Custom Metadatas</pluralLabel>
</CustomObject>