force-app/main/default/objects/Test_Carousel_Custom_Metadata__mdt/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>Name of the company. This will be used as alt text for the image</description>
    <label>Client Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>