force-app/main/default/objects/Test_Carousel_Custom_Metadata__mdt/fields/Content_Key__c.field-meta.xml
<CustomField>
    <fullName>Content_Key__c</fullName>
    <description>The unique CMS content key used to reference the logo image file</description>
    <label>Content Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>