force-app/main/default/objects/Test_Carousel_Custom_Metadata__mdt/fields/Slide_Number__c.field-meta.xml
<CustomField>
    <fullName>Slide_Number__c</fullName>
    <description>The number of the slide. This is used as a unique identifier and to sort the slides. Number should start at 01.</description>
    <label>Slide Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>